# digit-sim

./: CMakeLists.txt  README.md  main.c
example/: MSI_74LS290.c
include/: bit.h  clock.h  combinational.h  digit_sim.h  sequential.h  utils.h
src/: clock.c  combinational.c  logic_gates.c  sequential.c
test/: assign_test.c
